RESOLVED FIXED44409
Layout tests don't run when using WebKitTestRunner in Debug
https://bugs.webkit.org/show_bug.cgi?id=44409
Summary Layout tests don't run when using WebKitTestRunner in Debug
Jon Honeycutt
Reported 2010-08-23 02:14:43 PDT
Layout tests don't run when using WebKitTestRunner in Debug.
Attachments
Patch (4.72 KB, patch)
2010-08-23 02:18 PDT, Jon Honeycutt
mitz: review+
Jon Honeycutt
Comment 1 2010-08-23 02:18:58 PDT
Jon Honeycutt
Comment 2 2010-08-23 14:32:20 PDT
Landed in r65831. Thanks, Dan!
Note You need to log in before you can comment on or make changes to this bug.