Layout tests do not run when using WebKitTestRunner in a Debug build. https://bugs.webkit.org/show_bug.cgi?id=44409

Reviewed by Dan Bernstein.

WebKit2:

* UIProcess/Launcher/win/ProcessLauncherWin.cpp:
(WebKit::ProcessLauncher::launchProcess):
Use WebKit2WebProcess_debug.exe when building Debug.

WebKitTools:

* WebKitTestRunner/win/TestControllerWin.cpp:
(WTR::TestController::initializeInjectedBundlePath):
Use InjectedBundle_debug.dll when building Debug.

Canonical link: https://commits.webkit.org/56610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65831 268f45cc-cd09-0410-ab3c-d52691b4dbfc